Configure image form

--- a/src/Argon/BlogBundle/Resources/translations/messages.en.yml
+++ b/src/Argon/BlogBundle/Resources/translations/messages.en.yml
@@ -9,6 +9,8 @@ admin:
     blog:            Blog
     title:           Title
     body:            Content
+    image:           Image
+    image_empty:     No image has been yet selected for this post.
     creator:         Creator
     status:          Status
     draft:           Draft
