--- a/src/Argon/BlogBundle/Resources/translations/messages.en.yml
+++ b/src/Argon/BlogBundle/Resources/translations/messages.en.yml
@@ -35,4 +35,8 @@ admin:
     updated:         Post has been updated.
 
     comment:
-      comment:      Comments
+      comment:        Comments
+      delete:         Delete
+      delete_confirm: Do you want to delete this comment?
+      deleted:        Comment has been deleted.
+      belong_error:   Comment doesn't belong to post.
