Change password and edit forms

--- a/src/Argon/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Argon/UserBundle/Resources/translations/messages.en.yml
@@ -29,6 +29,10 @@ registration:
   submit: Register
 
 change_password:
-    submit: Change password
+  submit: Change password
+
+profile:
+  edit:
+    submit: Edit preferences
 
 go_back: Back
