--- a/src/Argon/WebBundle/Resources/translations/messages.en.yml
+++ b/src/Argon/WebBundle/Resources/translations/messages.en.yml
@@ -23,5 +23,6 @@ admin:
     skill:     Skills
 
   dashboard:
-    title:   Dashboard
-    version: Version
+    title:    Dashboard
+    whatsnew: What's new?
+    version:  Version
