Blog body help text

--- a/src/Argon/BlogBundle/Resources/translations/messages.en.yml
+++ b/src/Argon/BlogBundle/Resources/translations/messages.en.yml
@@ -18,6 +18,7 @@ admin:
     blog:            Blog
     title:           Title
     body:            Content
+    body_help:       You can use markdown
     image:           Image
     image_empty:     No image has been yet selected for this post.
     creator:         Creator
