--- a/src/Argon/GameBundle/Resources/translations/messages.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/messages.en.yml
@@ -14,6 +14,7 @@ character:
   race:                 Race
   race_placeholder:     Select your character's race
   abilities:            Abilities
+  abilities_help:       Drag & drop to re-order your abilities
   experience:           Experience
   switch:               Switch
   skills:               Skills
